Study : 간단한 로그인 구현 - http 파일 생성 (테스트 코드 작성) - 로그인 관련 Exception 생성 및 throw 로직 - extend CRUDRepository 관련 - data.sql 이용하여, 프로그램 실행 시점에서 데이터 삽입하는 로직

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,11 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
-# 페이지네이션의 시작을 1 로 하겠다. : 웹 요청을 통한 page 를 교정해줌
+  jpa:
+    defer-datasource-initialization: true
+  sql:
+    init
+  # 페이지네이션의 시작을 1 로 하겠다. : 웹 요청을 통한 page 를 교정해줌
   data:
     web:
       pageable:
